--- a/opdracht_1.html
+++ b/opdracht_1.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Opdracht 1</title>
 </head>
 <body>
-<h1>Web Development</h1>
-<p>Dit is een eenvoudige paragraaf</p>
 
 </body>
 </html>
