--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
 <h1>Web Development</h1>
 <p>Dit is een eenvoudige paragraaf</p>
-<p>errtohjnrthrthrtnhortinh</p>
+<p>Probeersel</p>
 </body>
 </html>
