--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
 </head>
 <body>
 <h1>Web Development</h1>
-<p>Dit is een eenvoudige paragraaf</p>
+ul>
+<li>
+    <h2>Labo 2</h2>
+    <ol>
+        <li><a href="opdracht 3.html">Opdracht 3</a></li>
+    </ol>
+</li>
+<p>Labo 2</p>
 <p>Probeersel</p>
 <p>Werkt dit?</p>
 </body>
