--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ ul>
 <li>
     <h2>Labo 2</h2>
     <ol>
-        <li><a href="opdracht 3.html">Opdracht 3</a></li>
+        <li><a href="Labo_2/opdracht 3.html">Opdracht 3</a></li>
     </ol>
 </li>
 <p>Labo 2</p>
