--- a/index.html
+++ b/index.html
@@ -10,12 +10,9 @@
     <h2>Labo 2</h2>
     <ol>
         <li><a href="Labo_2/opdracht 3.html">Opdracht 3</a></li>
-        <li><a href="Opdracht4.html"></a></li>
+        <li><a href="Labo_2/Opdracht4.html"></a></li>
     
     </ol>
 </li>
-<p>Labo 2</p>
-<p>Probeersel</p>
-<p>Werkt dit?</p>
 </body>
 </html>
