--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ol>
         <li><a href="Labo_2/opdracht 3.html">Opdracht 3</a></li>
         <li><a href="Labo_2/Opdracht4.html"></a></li>
-    
+<li><a href="Labo_2/Opdracht5.html">Opdracht 5</a></li>
     </ol>
 </li>
 </body>
