--- a/Labo_2/Opdracht 3.html
+++ b/Labo_2/Opdracht 3.html
@@ -5,7 +5,7 @@
     <title>Opdracht 3</title>
 </head>
 <body>
-<h1>Opdracht 3 hoort hier te staan</h1>
+<h1>Opdracht 3</h1>
 <p>
     Werkt dit?
 </p>
