--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <li>
     <h2>Labo 2</h2>
     <ol>
-        <li><a href="Labo_2/opdracht 3.html">Opdracht 3</a></li>
-        <li><a href="Labo_2/Opdracht4.html"></a></li>
-<li><a href="Labo_2/Opdracht5.html">Opdracht 5</a></li>
+        <li><a href="Labo_2/Opdracht%203.html">Opdracht 3</a></li>
+        <li><a href="Labo_2/Opdracht4.html">Opdracht 4</a></li>
+        <li><a href="Labo_2/Opdracht5.html">Opdracht 5</a></li>
+
     </ol>
 </li>
 </body>
