--- a/Labo_2/Opdracht6.html
+++ b/Labo_2/Opdracht6.html
@@ -5,6 +5,7 @@
     <title>Opdracht 6</title>
 </head>
 <body>
+<h1>Opdracht 6</h1>
 <p>
     Waarom zijn deze uitdrukkingen niet correct genest?
 </p>
