--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="Labo_2/Opdracht4.html">Opdracht 4</a></li>
         <li><a href="Labo_2/Opdracht5.html">Opdracht 5</a></li>
         <li><a href="Labo_2/Opdracht6.html">Opdracht 6</a></li>
+        <li><a href="Labo_2/Opdracht7.html">Opdracht 7</a></li>
     </ol>
 </li>
 </body>
