--- a/Labo_2/Opdracht5.html
+++ b/Labo_2/Opdracht5.html
@@ -5,6 +5,7 @@
     <title>Opdracht 5</title>
 </head>
 <body>
+<h1>Opdracht 5</h1>
 <p>
     Gebruik en echter niet voor lay-out doeleinden, daarvoor gebruiken we immers CSS!
 </p>
