--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <li><a href="Labo_2/Opdracht5.html">Opdracht 5</a></li>
         <li><a href="Labo_2/Opdracht6.html">Opdracht 6</a></li>
         <li><a href="Labo_2/Opdracht7.html">Opdracht 7</a></li>
+        <li><a href="Labo_2/Opdracht8.html">Opdracht 8</a></li>
+        <li><a href="Labo_2/Opdracht9.html">Opdracht 9</a></li>
+        <li><a href="Labo_2/Opdracht10.html">Opdracht 10</a></li>
     </ol>
 </li>
 </body>
