--- a/Labo_2/Opdracht9.html
+++ b/Labo_2/Opdracht9.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Opdracht 3</title>
+    <title>Opdracht 9</title>
 </head>
 <body>
-<h1>Opdracht 3</h1>
+<h1>Opdracht 9</h1>
 <p>
-    Dit is een eenvoudige paragraaf
+    Ik begrijp niet hoe ik deze moet doen.
 </p>
 </body>
 </html>
