--- a/Labo_2/Opdracht11.html
+++ b/Labo_2/Opdracht11.html
@@ -5,6 +5,6 @@
     <title>Opdracht 11</title>
 </head>
 <body>
-
+<img src="images/Screenshot-Microsoft-Taal.jpg" height="303" width="605"/>
 </body>
 </html>
