--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="Labo_2/Opdracht8.html">Opdracht 8</a></li>
         <li><a href="Labo_2/Opdracht9.html">Opdracht 9</a></li>
         <li><a href="Labo_2/Opdracht10.html">Opdracht 10</a></li>
+        <li><a href="Labo_2/Opdracht11.html">Opdracht 11</a></li>
     </ol>
 </li>
 </body>
