--- a/Labo_2/Opdracht11.html
+++ b/Labo_2/Opdracht11.html
@@ -5,6 +5,7 @@
     <title>Opdracht 11</title>
 </head>
 <body>
+<h1>Opdracht 11</h1>
 <img src="images/Screenshot-Microsoft-Taal.jpg" height="303" width="605"/>
 </body>
 </html>
