--- a/Labo_2/Opdracht10.html
+++ b/Labo_2/Opdracht10.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Opdracht 10</h1>
 <p>
-    Wat is er verkeerd in onderstaand HTML fragment?
+    <em>Wat is er verkeerd in onderstaand HTML fragment?</em>
     <ul>
     <li>een</li>
     <li>twee</li>
