--- a/Labo_2/Opdracht12.html
+++ b/Labo_2/Opdracht12.html
@@ -8,7 +8,7 @@
 <h1>Opdracht 12</h1>
 <img src="images/Screenshot-LG-TV.jpg" height="274" width="605"/></body>
 <p>
-    Waar precies bewaard de applicatie welke toestellen je selecteerde? Ben je nog andere herkenbare informatie tegengekomen op die beide tabbladen? Zo ja, dewelke?
+   <em> Waar precies bewaard de applicatie welke toestellen je selecteerde? Ben je nog andere herkenbare informatie tegengekomen op die beide tabbladen? Zo ja, dewelke?</em>
 </p>
 <p>
     We zien dat de webapplicatie bij de cookies een cookie ‘compare cart’ aanmaakt waarin hij alle nodige informatie opslaat om correct te functioneren en vergelijken. Daarnaast zien we cookies die bijhouden welke producten wij recentelijk hebben bekeken en cookies voor een WhatsApp gesprek. Vermoedelijk voor de Helpdesk/helpservice.
