--- a/Labo_2/Opdracht4.html
+++ b/Labo_2/Opdracht4.html
@@ -7,7 +7,16 @@
 <body>
 <h1>Opdracht 4</h1>
 <p>
-    Poging 5
+    Tussen     elk      woord      staan      er      5     spaties.
+</p>
+<p>
+    5
+
+
+
+
+
+    enters
 </p>
 </body>
 </html>
