--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="Labo_2/Opdracht10.html">Opdracht 10</a></li>
         <li><a href="Labo_2/Opdracht11.html">Opdracht 11</a></li>
         <li><a href="Labo_2/Opdracht12.html">Opdracht 12</a></li>
+        <li><a href="Labo_2/Opdracht13.html">Opdracht 13</a></li>
     </ol>
 </li>
 </body>
