--- a/Labo_2/Opdracht5.html
+++ b/Labo_2/Opdracht5.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Opdracht 5</h1>
 <p>
-    Gebruik en echter niet voor lay-out doeleinden, daarvoor gebruiken we immers CSS!
+   <em>Gebruik en echter niet voor lay-out doeleinden, daarvoor gebruiken we immers CSS!</em>
 </p>
 </body>
 </html>
