Final touch up - push now

--- a/Labo_2/Opdracht8.html
+++ b/Labo_2/Opdracht8.html
@@ -17,7 +17,7 @@
     </em>
 </p>
 <p>
-    Het is niet correct aangezien het 'strong' elementen zich in een niet afgelosten 'span' element bevindt. Als je dit wel wilt doen moet je het 'span' element afsluiten na "hier komt" een nieuw element 'span' starten, het 'strong' element er in plaatsen, vervolgens je tekst er in zetten en dan je en dan correct nesten.
+    Het is niet correct aangezien het 'strong' element zich in een niet afgelosten 'span' element bevindt. Als je dit wel wilt doen moet je het 'span' element afsluiten na "hier komt" een nieuw element 'span' starten, het 'strong' element er in plaatsen, vervolgens je tekst er in zetten en dan correct nesten.
 </p>
 </body>
 </html>
