--- a/Labo_2/Opdracht11.html
+++ b/Labo_2/Opdracht11.html
@@ -7,5 +7,8 @@
 <body>
 <h1>Opdracht 11</h1>
 <img src="images/Screenshot-Microsoft-Taal.jpg" height="303" width="605"/>
+<p>
+    De gekozen taalinstelling wordt bijgehouden in een cookie.
+</p>
 </body>
 </html>
