Labo 3 - start poging

--- a/index.html
+++ b/index.html
@@ -22,5 +22,11 @@
         <li><a href="Labo_2/Opdracht13.html">Opdracht 13</a></li>
     </ol>
 </li>
+<li>
+    <h2>Labo 3</h2>
+    <ol>
+        <li><a href="Labo_3/Homepage">Homepage</a></li>
+    </ol>
+</li>
 </body>
 </html>
