--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <li>
     <h2>Labo 3</h2>
     <ol>
-        <li><a href="Labo_3/Homepage">Homepage</a></li>
+        <li><a href="Labo_3/Homepage.html">Homepage</a></li>
     </ol>
 </li>
 </body>
