--- a/Labo_2/Opdracht12.html
+++ b/Labo_2/Opdracht12.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 <h1>Opdracht 12</h1>
-<img src="images/Screenshot-LG-TV.jpg" height="274" width="605"/></body>
+<img src="images/Screenshot-LG-TV.jpg" height="274" width="605"/>
+</body>
 <p>
    <em> Waar precies bewaard de applicatie welke toestellen je selecteerde? Ben je nog andere herkenbare informatie tegengekomen op die beide tabbladen? Zo ja, dewelke?</em>
 </p>
