--- a/Labo_3/Homepage/Homepage.html
+++ b/Labo_3/Homepage/Homepage.html
@@ -20,5 +20,13 @@
 
 </ul>
 <img src="DSC_0891-Kopie.JPG" height="200" width="200"/>
+
+<ul>
+    <li>Hobby's
+        <ul>
+            <li><a href="Autofotografie.html"></li>
+        </ul>
+    </li>
+</ul>
 </body>
 </html>
