--- a/Labo_3/Homepage/Homepage.html
+++ b/Labo_3/Homepage/Homepage.html
@@ -24,7 +24,7 @@
 <ul>
     <li>Hobby's
         <ul>
-            <li><a href="Autofotografie.html"></li>
+            <li><a href="Labo_3/Homepage/Autofotografie">Autofotografie</a></li>
         </ul>
     </li>
 </ul>
