--- a/Labo_3/Homepage/Homepage.html
+++ b/Labo_3/Homepage/Homepage.html
@@ -19,7 +19,7 @@
     </li>
 
 </ul>
-<img src="DSC_0891-Kopie.JPG" height="200" width="200"/>
+<img src="Images/DSC_0891-Kopie.JPG" height="200" width="200"/>
 
 <ul>
     <li>Hobby's
