--- a/Labo_3/Homepage/Autofotografie.html
+++ b/Labo_3/Homepage/Autofotografie.html
@@ -5,6 +5,6 @@
     <title>Autofotografie</title>
 </head>
 <body>
-<img src="DSC_7391%20(1).jpg" alt="Autofotografie" height="200" width="200">
+<img src="Images/DSC_7391%20(1).jpg" alt="Autofotografie" height="200" width="200">
 </body>
 </html>
