--- a/Labo_3/Homepage/Homepage.html
+++ b/Labo_3/Homepage/Homepage.html
@@ -24,7 +24,7 @@
 <ul>
     <li>Hobby's
         <ul>
-            <li><a href="Labo_3/Homepage/Autofotografie.html">Autofotografie</a></li>
+            <li><img src="Images/DSC_7391%20(1).jpg">Autofotografie</img></li>
         </ul>
     </li>
 </ul>
