--- a/Labo_3/Homepage/Autofotografie.html
+++ b/Labo_3/Homepage/Autofotografie.html
@@ -5,6 +5,6 @@
     <title>Autofotografie</title>
 </head>
 <body>
-<img src="Images/DSC_0891-Kopie.JPG" alt="Autofotografie" height="200" width="200">
+<p> Test hier </p>
 </body>
 </html>
