--- a/Labo_3/Homepage/Homepage.html
+++ b/Labo_3/Homepage/Homepage.html
@@ -24,7 +24,7 @@
 <ul>
     <li>Hobby's
         <ul>
-            <li><a href="TestPagina.html">Test</a></li>
+            <li><a href="Autofotografie.html">Test</a></li>
         </ul>
     </li>
 </ul>
