--- a/Labo_3/Homepage/Autofotografie.html
+++ b/Labo_3/Homepage/Autofotografie.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <p> Test hier </p>
-<img src="Images/DSC_0891-Kopie.JPG" height="274" width="605"/>
+<img src="Images/DSC_7391%20(1).jpg" height="605" width="274"/>
 </body>
 </html>
