--- a/Labo_3/Homepage/Autofotografie.html
+++ b/Labo_3/Homepage/Autofotografie.html
@@ -5,7 +5,7 @@
     <title>Autofotografie</title>
 </head>
 <body>
-<p> Test hier </p>
+<p>Foto gemaakt op 22 juni 2025 in Waregem. </p>
 <img src="Images/DSC_7391%20(1).jpg" height="600" width="400"/>
 </body>
 </html>
