--- a/Labo_3/Homepage/Homepage.html
+++ b/Labo_3/Homepage/Homepage.html
@@ -24,7 +24,8 @@
 <ul>
     <li>Hobby's
         <ul>
-            <li><a href="Autofotografie.html">Test</a></li>
+            <li><a href="Autofotografie.html">Autofotografie</a></li>
+            <li><a href="Basketbal.html">Basketbal</a></li>
         </ul>
     </li>
 </ul>
