--- a/Labo_3/Homepage/Homepage.html
+++ b/Labo_3/Homepage/Homepage.html
@@ -26,6 +26,7 @@
         <ul>
             <li><a href="Autofotografie.html">Autofotografie</a></li>
             <li><a href="Basketbal.html">Basketbal</a></li>
+            <li><a href="WRC.html">World Rally Championship</a></li>
         </ul>
     </li>
 </ul>
