--- a/Labo_3/Homepage/Basketbal.html
+++ b/Labo_3/Homepage/Basketbal.html
@@ -5,7 +5,7 @@
     <title>Basketbal</title>
 </head>
 <body>
-<p>Ik speel in het groene tenuetje. </p>
+<p>Ik speelde tussen 2017 en 2025 basketbal in Sint-Eloois-Winkel bij WIBAC. Ik ben afgelopen seizoen (tijdelijk) gestopt door mijn studies. Ik wist namelijk niet of ik nog tijd ging overhebben om te gaan trainen/spelen.</p>
 <img src="Images/Vik-Basketfoto.jpg" alt="2 spelers staan met hun rug naar de fotograaf. Ze hebben beide het rugnummer 16." height="600" width="800"/>
 </body>
 </html>
