--- a/Labo_3/Homepage/Homepage.html
+++ b/Labo_3/Homepage/Homepage.html
@@ -19,7 +19,7 @@
     </li>
 
 </ul>
-<img src="Images/DSC_0891-Kopie.JPG" height="200" width="200"/>
+<img src="Images/DSC_0891-Kopie.JPG" height="300" width="200"/>
 
 <ul>
     <li>Hobby's
@@ -27,6 +27,11 @@
             <li><a href="Autofotografie.html">Autofotografie</a></li>
             <li><a href="Basketbal.html">Basketbal</a></li>
             <li><a href="WRC.html">World Rally Championship</a></li>
+        </ul>
+    </li>
+    <li>Interesses
+        <ul>
+            <li
         </ul>
     </li>
 </ul>
