--- a/Labo_3/Homepage/WRC.html
+++ b/Labo_3/Homepage/WRC.html
@@ -5,6 +5,7 @@
     <title>WRC</title>
 </head>
 <body>
+<h1>World Rally Championship</h1>
 <p>
     Tijdens onze vakantie naar Duitsland in 2013 is mijn passie voor het WRC begonnen. Sindsdien ben ik het WRC beginnen volgen en indien mogelijk gingen we ook eens naar een officiële manche gaan kijken.
 </p>
