--- a/Labo_3/Homepage/Homepage.html
+++ b/Labo_3/Homepage/Homepage.html
@@ -31,7 +31,7 @@
     </li>
     <li>Interesses
         <ul>
-            <li
+            <li><a href="FavorieteMuziek.html">Favoriete muziek</a></li>
         </ul>
     </li>
 </ul>
