--- a/Labo_3/Homepage/FavorieteFilm.html
+++ b/Labo_3/Homepage/FavorieteFilm.html
@@ -11,6 +11,6 @@
 <p>
     Ik ben meer een fan van series dan films. Zo is mijn favoriete serie 'Chernobyl'. Een mini-serie die de gebeurtenissen van de kernramp in Chernobyl toont. Als ik eens een film kijk, dan gaat mijn voorkeur uit naar actie films.
 </p>
-<im src="Images/Chernobyl-Poster-Mini-Serie.jpg" alt="We zien een persoon in een beschermend pak die de straten aan het ontsmeten is in Chernobyl." height="370" width="250"/>
+<img src="Images/Chernobyl-Poster-Mini-Serie.jpg" alt="We zien een persoon in een beschermend pak die de straten aan het ontsmeten is in Chernobyl." height="370" width="250"/>
 </body>
 </html>
