--- a/Labo_3/Homepage/FavorieteMuziek.html
+++ b/Labo_3/Homepage/FavorieteMuziek.html
@@ -11,5 +11,9 @@
 <p>
     Persoonlijk heb ik geen favoriete band/artiest of genre. Mijn voorkeur van muziek ligt wel meer bij modernere muziek met een hoger tempo (>100 bpm).
 </p>
+<P>
+    Mijn meest beluisterde nummer op dit moment is 'I Could Be The One' van Avicii en Nicky Romero (128 bpm).
+</P>
+<img src="Images/I-Could-Be-The-One.jpg" alt="Een afbeelding van de albumhoes met daarop de titel van het nummer en beide artiesten." height="300" width="300"/
 </body>
 </html>
