--- a/Labo_3/Homepage/Homepage.html
+++ b/Labo_3/Homepage/Homepage.html
@@ -32,7 +32,7 @@
     <li>Interesses
         <ul>
             <li><a href="FavorieteMuziek.html">Favoriete muziek</a></li>
-            <ali><a href="FavorieteFilm.html">Favoriete film/serie</a></li>
+            <li><a href="FavorieteFilm.html">Favoriete film/serie</a></li>
         </ul>
     </li>
 </ul>
