--- a/Labo_3/Homepage/Homepage.html
+++ b/Labo_3/Homepage/Homepage.html
@@ -33,6 +33,7 @@
         <ul>
             <li><a href="FavorieteMuziek.html">Favoriete muziek</a></li>
             <li><a href="FavorieteFilm.html">Favoriete film/serie</a></li>
+            <li><a href="FavorieteAuto.html">Favoriete auto</a></li>
         </ul>
     </li>
 </ul>
