--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <h2>Labo 3</h2>
     <ol>
         <li><a href="Labo_3/Homepage/Homepage.html">Homepage</a></li>
+        <li><a href="Labo_3/Contact/Contact.html">Hoe kan je ons bereiken?</a></li>
     </ol>
 </li>
 </body>
