--- a/Labo_3/Contact/Contact.html
+++ b/Labo_3/Contact/Contact.html
@@ -8,5 +8,15 @@
 <h1>
     Hoe kan je ons bereiken?
 </h1>
+<table>
+    <tr>
+        <th>Campus</th>
+        <th>Studiegebieden</th>
+        <th>Telefoonnummer</th>
+        <th>Fax</th>
+        <th>E-mailadres</th>
+        <th>Website</th>
+    </tr>
+</table>
 </body>
 </html>
