--- a/Labo_3/Contact/Contact.html
+++ b/Labo_3/Contact/Contact.html
@@ -9,6 +9,7 @@
     Hoe kan je ons bereiken?
 </h1>
 <table>
+    <thead>
     <tr>
         <th>Campus</th>
         <th>Studiegebieden</th>
@@ -17,6 +18,7 @@
         <th>E-mailadres</th>
         <th>Website</th>
     </tr>
+    </thead>
 </table>
 </body>
 </html>
