--- a/Labo_3/Contact/Contact.html
+++ b/Labo_3/Contact/Contact.html
@@ -11,7 +11,7 @@
 <table>
     <thead>
     <tr>
-        <th>Campus</th>
+        <th> colspan ="2" Campus</th>
         <th>Studiegebieden</th>
         <th>Telefoonnummer</th>
         <th>Fax</th>
@@ -19,6 +19,9 @@
         <th>Website</th>
     </tr>
     </thead>
+    <tr>
+
+    </tr>
 </table>
 </body>
 </html>
