--- a/Labo_3/Contact/Contact.html
+++ b/Labo_3/Contact/Contact.html
@@ -11,17 +11,19 @@
 <table>
     <thead>
     <tr>
-        <th> colspan ="2" Campus</th>
+        <th>Campus</th>
         <th>Studiegebieden</th>
         <th>Telefoonnummer</th>
         <th>Fax</th>
         <th>E-mailadres</th>
         <th>Website</th>
     </tr>
+    <tbody>
+        <tr>
+            <td>Kortrijk</td>
+        </tr>
+</tbody>
     </thead>
-    <tr>
-
-    </tr>
 </table>
 </body>
 </html>
