--- a/Labo_3/Contact/Contact.html
+++ b/Labo_3/Contact/Contact.html
@@ -21,7 +21,15 @@
     <tbody>
         <tr>
             <td>Kortrijk</td>
+            <td>Doorniksesteenweg 145 8500 Kortrijk</td>
+            <td>Handelswetenschappen, Bedrijfsmanagement &amp Informatica</td>
+            <td>+32 56 26 41 80</td>
+            <td>hwb.kortrijk@vives.be</td>
+            <td>HW&ampB</td>
         </tr>
+<tr>
+
+</tr>
 </tbody>
     </thead>
 </table>
