--- a/Labo_3/Contact/Contact.html
+++ b/Labo_3/Contact/Contact.html
@@ -4,6 +4,37 @@
     <meta charset="UTF-8">
     <title>Hoe kan je ons Bereiken?</title>
 </head>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+    }
+
+    h2 {
+        text-align: center;
+    }
+
+    table {
+        border-collapse: collapse;
+        width: 90%;
+        margin: 20px auto;
+    }
+
+    th, td {
+        border: 1px solid #000;
+        padding: 8px;
+        vertical-align: top;
+    }
+
+    th {
+        background-color: #f2f2f2;
+        text-align: center;
+    }
+
+    a {
+        color: blue;
+        text-decoration: underline;
+    }
+</style>
 <body>
 <h1>
     Hoe kan je ons bereiken?
