--- a/Labo_3/Contact/Contact.html
+++ b/Labo_3/Contact/Contact.html
@@ -40,7 +40,22 @@
             <td>HW&ampB</td>
         </tr>
 <tr>
-
+    <td>Roeseslare</td>
+    <td>Wilgenstraat 32 8800 Roeselare</td>
+    <td>Biotechnologie</td>
+    <td>+32 56 26 41 80</td>
+    <td>+32 56 26 41 80</td>
+    <td>bio.roeselare@vives.be</td>
+    <td>BIO</td>
+</tr>
+<tr>
+    <td>Torhout</td>
+    <td>Sint Jozefstraat 1 8820 Torhout</td>
+    <td>Onderwijs</td>
+    <td>+32 56 26 41 80</td>
+    <td>+32 56 26 41 80</td>
+    <td>ond.torhout@vives.be</td>
+    <td>OND</td>
 </tr>
 </tbody>
     </thead>
