--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <ol>
         <li><a href="Labo_3/Homepage/Homepage.html">Homepage</a></li>
         <li><a href="Labo_3/Contact/Contact.html">Hoe kan je ons bereiken?</a></li>
+        <li><a href="Labo_3/Contact/Contact2.html">Poging 2</a></li>
     </ol>
 </li>
 </body>
