--- a/Labo_3/Contact/Contact.html
+++ b/Labo_3/Contact/Contact.html
@@ -32,7 +32,7 @@
     </tr>
     <tbody>
         <tr>
-            <th> colspan ="2" >Kortrijk</th>
+            <td> rowspan ="2">Kortrijk</td>
             <td>Doorniksesteenweg 145 8500 Kortrijk</td>
             <td>Handelswetenschappen, Bedrijfsmanagement &amp Informatica</td>
             <td>+32 56 26 41 80</td>
