--- a/Labo_3/Contact/Contact.html
+++ b/Labo_3/Contact/Contact.html
@@ -23,7 +23,7 @@
 <table>
     <thead>
     <tr>
-        <th>Campus</th>
+        <th> colspan="2">Campus</th>
         <th>Studiegebieden</th>
         <th>Telefoonnummer</th>
         <th>Fax</th>
@@ -32,7 +32,7 @@
     </tr>
     <tbody>
         <tr>
-            <td> rowspan ="2">Kortrijk</td>
+            <td>Kortrijk</td>
             <td>Doorniksesteenweg 145 8500 Kortrijk</td>
             <td>Handelswetenschappen, Bedrijfsmanagement &amp Informatica</td>
             <td>+32 56 26 41 80</td>
