--- a/Labo_3/Opleidingsaanbod/Opleidingdsaanbod.html
+++ b/Labo_3/Opleidingsaanbod/Opleidingdsaanbod.html
@@ -48,7 +48,7 @@
 </ul>
 <p>Definitie van Ohm</p>
 <p>
-    De Ohm is een afgeleide SI-eenheid. Ze is afgeleid van Amp&egrave;re en Watt. Ze wordt genoteerd met de griekse hoofdletter Omega (Û). Door een onderdeel met een weerd van 1 Ohm zal bij een spanning van 1 Volt een stroom van 1 Amp&egrave;re vloeinen.
+    De Ohm is een afgeleide SI-eenheid. Ze is afgeleid van Amp&egrave;re en Watt. Ze wordt genoteerd met de griekse hoofdletter Omega (Ω). Door een onderdeel met een weerd van 1 Ohm zal bij een spanning van 1 Volt een stroom van 1 Amp&egrave;re vloeinen.
 </p>
 <p>&copy; 2024</p>
 </body>
