Aanpassing met meneer

--- a/Labo_3/Contact/Contact.html
+++ b/Labo_3/Contact/Contact.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Hoe kan je ons Bereiken?</title>
+    <style>
+        table {
+            border-collapse: collapse;
+            width: 90%;
+            margin: 20px auto;
+        }
+        th, td {
+            border: 1px solid #000;
+            padding: 8px;
+            vertical-align: top;
+        }
+    </style>
 </head>
-<style>
-    table {
-        border-collapse: collapse;
-        width: 90%;
-        margin: 20px auto;
-    }
-    th, td {
-        border: 1px solid #000;
-        padding: 8px;
-        vertical-align: top;
-    }
-</style>
 <body>
 <h1>
     Hoe kan je ons bereiken?
@@ -23,7 +23,7 @@
 <table>
     <thead>
     <tr>
-        <th>Campus</th>
+        <th colspan="2">Campus</th>
         <th>Studiegebieden</th>
         <th>Telefoonnummer</th>
         <th>Fax</th>
@@ -35,11 +35,11 @@
         <tr>
             <td>Kortrijk</td>
             <td>Doorniksesteenweg 145 8500 Kortrijk</td>
-            <td>Handelswetenschappen, Bedrijfsmanagement &amp Informatica</td>
+            <td>Handelswetenschappen, Bedrijfsmanagement &amp; Informatica</td>
             <td>+32 56 26 41 80</td>
             <td>+32 56 26 41 80</td>
             <td>hwb.kortrijk@vives.be</td>
-            <td>HW&ampB</td>
+            <td>HW&amp;B</td>
         </tr>
 <tr>
     <td>Roeseslare</td>
