--- a/Labo_3/Homepage/Homepage.html
+++ b/Labo_3/Homepage/Homepage.html
@@ -19,7 +19,7 @@
     </li>
 
 </ul>
-<img src="Images/DSC_0891-Kopie.JPG" height="250" width="220"/>
+<img src="Images/DSC_0891-Kopie.JPG" alt="Een foto van mijzelf." height="250" width="220"/>
 
 <ul>
     <li>Hobby's
