--- a/Labo_3/Opleidingsaanbod/Opleidingdsaanbod.html
+++ b/Labo_3/Opleidingsaanbod/Opleidingdsaanbod.html
@@ -18,26 +18,30 @@
 <p>Aan het studiegebied Handelswetenschappen en bedrijfskunde kan je volgende professionele bachelor diploma's behalen:</p>
 <ul>
     <li>Toegepaste informatica</li>
+    </ul>
     <ol>
         <li>Applicatie-ontwikkeling</li>
+        </ol>
         <ul>
-            <li>Apps &amp gamification</li>
-            <li>Networks &amp cybersecurity</li>
+            <li>Apps &amp; gamification</li>
+            <li>Networks &amp; cybersecurity</li>
             <li>AI</li>
         </ul>
         <li>Softwaremanagement</li>
         <ul>
-            <li>Business &amp IT</li>
+            <li>Business &amp; IT</li>
         </ul>
     </ol>
+<ul>
     <li>Bedrijfsmanagement</li>
+</ul>
     <ol>
         <li>Accountancy-Fiscaliteit</li>
         <li>Automotive management</li>
-        <li>Business Management &amp Entrepeneurship</li>
+        <li>Business Management &amp; Entrepeneurship</li>
         <li>Eventmanagement</li>
         <li>Financie- en verzekeringswezen</li>
-        <li>Marketing - specialistatie Retail- &amp storemanagement</li>
+        <li>Marketing - specialistatie Retail- &amp; storemanagement</li>
     </ol>
     <li>Office management</li>
     <ol>
@@ -45,10 +49,10 @@
         <li>HR officer</li>
         <li>Medical office managgerr</li>
     </ol>
-</ul>
+
 <p>Definitie van Ohm</p>
 <p>
-    De Ohm is een afgeleide SI-eenheid. Ze is afgeleid van Amp&egrave;re en Watt. Ze wordt genoteerd met de griekse hoofdletter Omega (Ω). Door een onderdeel met een weerd van 1 Ohm zal bij een spanning van 1 Volt een stroom van 1 Amp&egrave;re vloeinen.
+    De Ohm is een afgeleide SI-eenheid. Ze is afgeleid van Amp&egrave;re en Watt. Ze wordt genoteerd met de griekse hoofdletter Omega (Ω). Door een onderdeel met een weerstand van 1 Ohm zal bij een spanning van 1 Volt een stroom van 1 Amp&egrave;re vloeien.
 </p>
 <p>&copy; 2024</p>
 </body>
