--- a/Labo_3/Homepage/Homepage.html
+++ b/Labo_3/Homepage/Homepage.html
@@ -6,37 +6,11 @@
 </head>
 <body>
 <h1>Hoofdpagina</h1>
-<h1>
-    Vik Verbeke
-</h1>
-<ul>
-    <li>Persoonlijke informatie
-    <ul>
-        <li>Volledige naam: Vik Wim Verbeke</li>
-        <li>Adres: Steenbakkerstraat 5, 8501 Heule</li>
-        <li>Telefoonnummer: +32 123 45 76 89</li>
-        <li>E-mailadres: vik.verbeke@student.vives.be</li>
-    </ul>
-    </li>
-
-</ul>
-<img src="Images/DSC_0891-Kopie.JPG" alt="Een foto van mijzelf." height="250" width="220"/>
 
 <ul>
-    <li>Hobby's
-        <ul>
-            <li><a href="Autofotografie.html">Autofotografie</a></li>
-            <li><a href="Basketbal.html">Basketbal</a></li>
-            <li><a href="WRC.html">World Rally Championship</a></li>
-        </ul>
-    </li>
-    <li>Interesses
-        <ul>
-            <li><a href="FavorieteMuziek.html">Favoriete muziek</a></li>
-            <li><a href="FavorieteFilm.html">Favoriete film/serie</a></li>
-            <li><a href="FavorieteAuto.html">Favoriete auto</a></li>
-        </ul>
-    </li>
+    <li><a href="Index.html">Index</a></li>
+    <li><a href="Hobbys.html">Hobbys</a></li>
+    <li><a href="Likes.html">Likes</a></li>
 </ul>
 </body>
 </html>
