--- a/Labo_3/Homepage/Hobbys.html
+++ b/Labo_3/Homepage/Hobbys.html
@@ -16,6 +16,8 @@
         </ul>
     </li>
 </ul>
-<li><a href="Index.html">Ga terug naar de Hoofdpagina</a></li>
+<li><a href="Homepage.html">Ga terug naar de <em>Hoofdpagina</em></a></li>
+<li><a href="Index.html">Ga terug naar <em>Index</em></a></li>
+<li><a href="Likes.html">Ga terug naar <em>mijn interesses</em></a></li>
 </body>
 </html>
