--- a/Labo_3/Homepage/Index.html
+++ b/Labo_3/Homepage/Index.html
@@ -20,5 +20,8 @@
 </ul>
 <img src="Images/DSC_0891-Kopie.JPG" alt="Een foto van mijzelf." height="250" width="220"/>
 
+<li><a href="Homepage.html">Ga terug naar de <em>Hoofdpagina</em></a></li>
+<li><a href="Hobbys.html">Ga terug naar <em>Hobbys</em></a></li>
+<li><a href="Likes.html">Ga terug naar <em>mijn interesses</em></a></li>
 </body>
 </html>
