--- a/Labo_3/Homepage/Likes.html
+++ b/Labo_3/Homepage/Likes.html
@@ -16,5 +16,8 @@
         </ul>
     </li>
 </ul>
+<li><a href="Homepage.html">Ga terug naar de <em>Hoofdpagina</em></a></li>
+<li><a href="Index.html">Ga terug naar <em>Index</em></a></li>
+<li><a href="Hobbys.html">Ga terug naar <em>Hobbys</em></a></li>
 </body>
 </html>
