--- a/Hoofdpagina.html
+++ b/Hoofdpagina.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Hoofdpagina</title>
 </head>
 <body>
 <h1>Web Development</h1>
