--- a/Labo_3/Homepage/Homepage.html
+++ b/Labo_3/Homepage/Homepage.html
@@ -12,5 +12,7 @@
     <li><a href="Hobbys.html">Hobbys</a></li>
     <li><a href="Likes.html">Likes</a></li>
 </ul>
+
+<li><a href="/index.html">Ga terug naar de <em>startpagina</em></a></li>
 </body>
 </html>
