--- a/Labo_3/Homepage/Index.html
+++ b/Labo_3/Homepage/Index.html
@@ -23,6 +23,6 @@
 <li><a href="Homepage.html">Ga terug naar de <em>Hoofdpagina</em></a></li>
 <li><a href="Hobbys.html">Ga terug naar <em>Hobbys</em></a></li>
 <li><a href="Likes.html">Ga terug naar <em>mijn interesses</em></a></li>
-<li><a href="../Hoofdpagina.html">Ga terug naar de <em>hoofdpagina</em></a></li>
+<li><a href="/index.html">Ga terug naar de <em>startpagina</em></a></li>
 </body>
 </html>
