--- a/Labo_3/Homepage/Hobbys.html
+++ b/Labo_3/Homepage/Hobbys.html
@@ -19,5 +19,6 @@
 <li><a href="Homepage.html">Ga terug naar de <em>Hoofdpagina</em></a></li>
 <li><a href="Index.html">Ga terug naar <em>Index</em></a></li>
 <li><a href="Likes.html">Ga terug naar <em>mijn interesses</em></a></li>
+<li><a href="/index.html">Ga terug naar de <em>startpagina</em></a></li>
 </body>
 </html>
