--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 </head>
 <body>
 <h1>Web Development</h1>
-<li>
-    <h2>Labo 2</h2>
+<h2>Labo 2</h2>
     <ol>
         <li><a href="Labo_2/Opdracht%203.html">Opdracht 3</a></li>
         <li><a href="Labo_2/Opdracht4.html">Opdracht 4</a></li>
@@ -21,14 +20,15 @@
         <li><a href="Labo_2/Opdracht12.html">Opdracht 12</a></li>
         <li><a href="Labo_2/Opdracht13.html">Opdracht 13</a></li>
     </ol>
-</li>
-<li>
-    <h2>Labo 3</h2>
+<h2>Labo 3</h2>
     <ol>
         <li><a href="Labo_3/Homepage/Homepage.html">Homepage</a></li>
         <li><a href="Labo_3/Contact/Contact.html">Hoe kan je ons bereiken?</a></li>
         <li><a href="Labo_3/Opleidingsaanbod/Opleidingdsaanbod.html">Opleidingsaanbod</a></li>
     </ol>
-</li>
+<h2>Labo 4</h2>
+    <ol>
+        <li><a href="Labo_4/Homepage/Homepage.html">Persoonlijke pagina</a></li>
+    </ol>
 </body>
 </html>
