--- a/Labo_3/Homepage/WRC.html
+++ b/Labo_3/Homepage/WRC.html
@@ -7,7 +7,7 @@
 <body>
 <h1>World Rally Championship</h1>
 <p>
-    Tijdens onze vakantie naar Duitsland in 2013 is mijn passie voor het WRC begonnen. Sindsdien ben ik het WRC beginnen volgen en indien mogelijk gingen we ook eens naar een officiële manche gaan kijken.
+    Tijdens onze vakantie naar Duitsland in 2013 is mijn passie voor het WRC begonnen. Sindsdien ben ik het WRC beginnen te volgen en indien mogelijk gingen we ook eens naar een officiële manche gaan kijken.
 </p>
 <img src="Images/WRC-Thierry-Neuville.jpg" alt="De rally wagen van Thierry Neuville en Nicolas Gilsoul zweeft spectaculair door de lucht na een sprong." height="600" width="900"/>
 </body>
