--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@
     <ol>
         <li><a href="Labo_4/Homepage/Homepage.html">Persoonlijke pagina</a></li>
     </ol>
+<h2>Labo 5</h2>
+<ol>
+    <li><a href="Labo_5/Opdracht_6.html">Opdracht 6</a></li>
+</ol>
 </body>
 </html>
