--- a/index.html
+++ b/index.html
@@ -34,5 +34,10 @@
 <ol>
     <li><a href="Labo_5/Opdracht_6.html">Opdracht 6</a></li>
 </ol>
+<h2>Labo 6</h2>
+<ol>
+    <li><a href="Labo_6/Opdracht_CV.html">Opdracht CV</a></li>
+    <li><a href="Labo_6/Opdracht4.html">Opdracht 4</a></li>
+</ol>
 </body>
 </html>
