--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 <ol>
     <li><a href="Labo_6/Opdracht_CV.html">Opdracht CV</a></li>
     <li><a href="Labo_6/Opdracht4.html">Opdracht 4</a></li>
+    <li><a href="Labo_6/Opdracht5.html">Opdracht 5</a></li>
+    <li><a href="Labo_6/Opdracht6.html">Opdracht 6</a></li>
 </ol>
 </body>
 </html>
