--- a/Labo_6/Opdracht5.html
+++ b/Labo_6/Opdracht5.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <h1>Opdracht 5</h1>
-<p>Op deze regel staat <a href="Labo_6/Opdracht_CV.html">hyperlink</a> met een icoontje ervoor.</p>
+<p>Op deze regel staat <a href="Opdracht_CV.html">hyperlink</a> met een icoontje ervoor.</p>
 </body>
 </html>
