--- a/Labo_4/Homepage/Index.html
+++ b/Labo_4/Homepage/Index.html
@@ -13,8 +13,8 @@
         <ul>
             <li>Volledige naam: Vik Wim Verbeke</li>
             <li>Adres: Steenbakkerstraat 5, 8501 Heule</li>
-            <li>Telefoonnummer: +32 123 45 76 89</li>
-            <li>E-mailadres: vik.verbeke@student.vives.be</li>
+            <li>Telefoonnummer: <a href="tel:+32 123 45 76 89">+32 4123 45 67 89</a></li>
+            <li>E-mailadres: <a href="mailto:vik.verbeke@student.vives.be">vik.verbeke@student.vives.be</a></li>
         </ul>
     </li>
 </ul>
