--- a/index.html
+++ b/index.html
@@ -41,5 +41,13 @@
     <li><a href="Labo_6/Opdracht5.html">Opdracht 5</a></li>
     <li><a href="Labo_6/Opdracht6.html">Opdracht 6</a></li>
 </ol>
+<h2>Labo 7</h2>
+<ol>
+    <li><a href="Labo_7/OpdrachtNatureBlog.html">Nature Blog</a></li>
+    <li><a href="Labo_7/Opdracht-PersoonlijkeHomepage/OpdrachtPersoonlijkeHomepagina.html">Persoonlijke Homepagina met CSS</a></li>
+    <li><a href="Labo_7/OpdrachtVrienden.html">Opdracht vrienden</a></li>
+    <li><a href="Labo_7/OnbekendeDataVrienden.html">Opdracht vrienden met ontbrekende data</a></li>
+    <li><a href="Labo_7/kalender">Kalender</a></li>
+</ol>
 </body>
 </html>
