--- a/Labo_7/OpdrachtVrienden.html
+++ b/Labo_7/OpdrachtVrienden.html
@@ -16,7 +16,7 @@
         <ul>
             <li>Volledige naam: Vik Wim Verbeke</li>
             <li>Adres: Steenbakkerstraat 5, 8501 Heule</li>
-            <li>Telefoonnummer: <a href="tel:+32 123 45 76 89">+32 4123 45 67 89</a></li>
+            <li>Telefoonnummer: <a href="tel:+32123457689">+32 4123 45 67 89</a></li>
             <li>E-mailadres: <a href="mailto:vik.verbeke@student.vives.be">vik.verbeke@student.vives.be</a></li>
         </ul>
     </li>
