--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <li><a href="Labo_7/Opdracht-PersoonlijkeHomepage/OpdrachtPersoonlijkeHomepagina.html">Persoonlijke Homepagina met CSS</a></li>
     <li><a href="Labo_7/OpdrachtVrienden.html">Opdracht vrienden</a></li>
     <li><a href="Labo_7/OnbekendeDataVrienden.html">Opdracht vrienden met ontbrekende data</a></li>
-    <li><a href="Labo_7/kalender">Kalender</a></li>
+    <li><a href="Labo_7/Kalender.html">Kalender</a></li>
 </ol>
 </body>
 </html>
