--- a/index.html
+++ b/index.html
@@ -49,5 +49,11 @@
     <li><a href="Labo_7/OnbekendeDataVrienden.html">Opdracht vrienden met ontbrekende data</a></li>
     <li><a href="Labo_7/Kalender.html">Kalender</a></li>
 </ol>
+<h2>Labo 8</h2>
+<ol>
+    <li><a href="Labo_8/LoremIpsum.html">Opdracht Lorem Ipsum</a></li>
+    <li><a href="Labo_8/OpdrachtLoremIpsumExtraSpace.html">Opdracht Lorem Ipsum extra space</a></li>
+    <li><a href="Labo_8/OpdrachtCocktailBar.html">Opdracht Cocktail bar</a></li>
+</ol>
 </body>
 </html>
