--- a/index.html
+++ b/index.html
@@ -55,5 +55,10 @@
     <li><a href="Labo_8/OpdrachtLoremIpsumExtraSpace.html">Opdracht Lorem Ipsum extra space</a></li>
     <li><a href="Labo_8/OpdrachtCocktailBar.html">Opdracht Cocktail bar</a></li>
 </ol>
+<h2>Labo 9</h2>
+<ol>
+    <li><a href="Labo_9/PositionerenVanImages.html">Opdracht Positioneren van Images</a></li>
+    <li><a href="Labo_9/Airbus.html">Opdracht Airbus</a></li>
+</ol>
 </body>
 </html>
