--- a/Labo_9/Airbus.html
+++ b/Labo_9/Airbus.html
@@ -13,7 +13,7 @@
     <img class="tekKlein" src="../../../Webdevelopment/Labo_9/Images/PositionerenImages/tekklein.png" alt="tekening van vliegtuig">
 </header>
 
-<div class="news"> <!-- news -->
+<section class="news"> <!-- news -->
     <h3>Eerste vlucht</h3>
     <p>Het toestel maakte zijn eerste trans-Atlantische vlucht met passagiers op 19 maart 2007 tussen
         Frankfurt am Main en New York.
@@ -32,9 +32,9 @@
     <p>Een Airbus A380 van Air France raakte tijdens het taxiën naar de startbaan op John F. Kennedy
         International Airport met zijn vleugel de staart van een Bombardier CRJ700 van Comair.
     </p>
-</div>
+</section>
 
-<div class="mainTekstMetLogo"> <!-- main -->
+<section class="mainTekstMetLogo"> <!-- main -->
 
     <!--<div>  (logo)
         <img src="../../../Webdevelopment/Labo_9/Images/PositionerenImages/airbus_logo.jpg" alt="Het logo van airbus">
@@ -53,7 +53,7 @@
         </p>
     </div>
 
-    <div class="galerij"> <!-- gallery -->
+    <section class="galerij"> <!-- gallery -->
         <div class="afbeeldingInGalerij">
             <img src="../../../Webdevelopment/Labo_9/Images/PositionerenImages/A380Grond.JPG" alt="Foto vliegtuig op de grond">
         </div>
@@ -81,10 +81,10 @@
         <div class="afbeeldingInGalerij">
             <img src="../../../Webdevelopment/Labo_9/Images/PositionerenImages/abramovich.jpg" alt="Abramovich">
         </div>
-    </div>
-</div>
+    </section>
+</section>
 
-<div class="bottom"> <!-- bottom -->
+<section class="bottom"> <!-- bottom -->
 
     <div class="manchester"> <!-- block -->
         <ul>
@@ -111,11 +111,11 @@
             <li> A380 - 800 </li>
         </ul>
     </div>
-</div>
+</section>
 
-<div class="copyright"> <!-- copyright -->
+<section class="copyright"> <!-- copyright -->
     <p>&lt; &copy; Airbus A380 &gt;</p>
-</div>
+</section>
 
 </body>
 </html>
