--- a/index.html
+++ b/index.html
@@ -70,5 +70,15 @@
     <li><a href="Labo_10/Compositie.html">Opdracht Mondriaan</a></li>
     <li><a href="Labo_10/PersoonlijkeHomepageBoot.html">Persoonlijke Homepage met Bootstrap 5</a></li>
 </ol>
+<h2>Labo 11</h2>
+<ol>
+    <li><a href="Labo_11/Grid%20exercises/exercise1.html">Opdracht 1</a></li>
+    <li><a href="Labo_11/Grid%20exercises/exercise2.html">Opdracht 2</a></li>
+    <li><a href="Labo_11/Grid%20exercises/exercise3.html">Opdracht 3</a></li>
+    <li><a href="Labo_11/Grid%20exercises/exercise4.html">Opdracht 4</a></li>
+    <li><a href="Labo_11/Grid%20exercises/exercise5.html">Opdracht 5</a></li>
+    <li><a href="Labo_11/Grid%20exercises/exercise6.html">Opdracht 6</a></li>
+    <li><a href="Labo_11/index.html">Aparte oefening</a></li>
+</ol>
 </body>
 </html>
