--- a/Labo_3/Homepage/Index.html
+++ b/Labo_3/Homepage/Index.html
@@ -18,6 +18,6 @@
         </ul>
     </li>
 </ul>
-<img src="Images/DSC_0891-Kopie.JPG" alt="Een foto van mijzelf." height="250" width="220"/>
+<img src="../../AFBEELDINGEN/Keanu%20Reeves.jpg" alt="Een foto van Keanu Reeves."/>
 </body>
 </html>
