--- a/Labo_4/Homepage/Index.html
+++ b/Labo_4/Homepage/Index.html
@@ -18,7 +18,7 @@
         </ul>
     </li>
 </ul>
-<img src="Images/DSC_0891-Kopie.JPG" alt="Een foto van mijzelf." height="250" width="220"/>
+<img src="../../AFBEELDINGEN/Keanu%20Reeves.jpg" alt="Een foto van Keanu Reeves."/>
 <ul>
 <li><a href="Homepage.html">Ga terug naar de <em>Hoofdpagina</em></a></li>
 <li><a href="Hobbys.html">Ga terug naar <em>Hobbys</em></a></li>
