--- a/Labo_7/Opdracht-PersoonlijkeHomepage/OpdrachtPersoonlijkeHomepagina.html
+++ b/Labo_7/Opdracht-PersoonlijkeHomepage/OpdrachtPersoonlijkeHomepagina.html
@@ -21,7 +21,7 @@
         </ul>
     </li>
 </ul>
-<img src="../Images/DSC_0891-Kopie.JPG" alt="Een foto van mijzelf."/>
+<img src="../../AFBEELDINGEN/Keanu%20Reeves.jpg" alt="Een foto van Keanu Reeves."/>
 
 <h2 class="schuinGetypt">Mijn hobbys</h2>
 
