--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Hoofdpagina</title>
 
+    <link rel="stylesheet" href="StijlHoofdIndex.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -26,7 +27,7 @@
     <ol>
         <li><a href="Labo_3/Homepage/Homepage.html">Homepage</a></li>
         <li><a href="Labo_3/Contact/Contact.html">Hoe kan je ons bereiken?</a></li>
-        <li><a href="Labo_3/Opleidingsaanbod/Opleidingdsaanbod.html">Opleidingsaanbod</a></li>
+        <li><a href="Labo_3/Opleidingsaanbod/Opleidingsaanbod.html">Opleidingsaanbod</a></li>
     </ol>
 <h2>Labo 4</h2>
     <ol>
@@ -80,5 +81,27 @@
     <li><a href="Labo_11/Grid%20exercises/exercise6.html">Opdracht 6</a></li>
     <li><a href="Labo_11/index.html">Aparte oefening</a></li>
 </ol>
+<h2>Labo 12</h2>
+<ol>
+    <li><a href="Labo_12/Beginsituatie%201/index.html">Opdracht 2</a></li>
+    <li><a href="Labo_12/Beginsituatie%202/index.html">Opdracht 3</a></li>
+    <li><a href="Labo_12/Beginsituatie%203/index.html">Opdracht 4</a></li>
+</ol>
+
+
+<footer>
+    <h1>Foto van het moment ... </h1>
+    <div class="containerFlex">
+        <div>
+         <img src="AFBEELDINGEN/DSC_4662_Be.png" class="foto" alt="Een foto van een sportief getunede Mazda RX-7 met een Liberty Walk body-kit.">
+        </div>
+
+         <div class="tekst">
+            <p>Deze foto werd gemaakt op zaterdag 13 december te Kortrijk. De getunede Mazda RX-7 was te bewonderen tijdens Petrol Brothers - On Ice 3.</p>
+            <p>Deze Mazda draagt een Liberty Walk body kit, bedoeld om de 'gewone' wagen te veranderen naar een sportief uitziende wagen.</p>
+            <p>&copy; Vik Verbeke</p>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
