--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
          <div class="tekst">
             <p>Deze foto werd gemaakt op zaterdag 13 december te Kortrijk. De getunede Mazda RX-7 was te bewonderen tijdens Petrol Brothers - On Ice 3.</p>
             <p>Deze Mazda draagt een Liberty Walk body kit, bedoeld om de 'gewone' wagen te veranderen naar een sportief uitziende wagen.</p>
-            <p>&copy; Vik Verbeke</p>
+            <p>&copy; 2026 - <em>Vik Verbeke</em></p>
         </div>
     </div>
 </footer>
