--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Hoofdpagina</title>
 
-    <link rel="stylesheet" href="StijlHoofdIndex.css">
+    <link rel="stylesheet" href="Styles/StijlHoofdIndex.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -33,6 +33,7 @@
     <ol>
         <li><a href="Labo_4/Homepage/Homepage.html">Persoonlijke pagina</a></li>
     </ol>
+<h2>CSS labo's</h2>
 <h2>Labo 5</h2>
 <ol>
     <li><a href="Labo_5/Opdracht_6.html">Opdracht 6</a></li>
@@ -87,21 +88,27 @@
     <li><a href="Labo_12/Beginsituatie%202/index.html">Opdracht 3</a></li>
     <li><a href="Labo_12/Beginsituatie%203/index.html">Opdracht 4</a></li>
 </ol>
+<h2>JavaScript labo's</h2>
+<h2>Labo 13</h2>
+<ol>
+    <li><a href="Labo_13/Opdracht%203/index.html">Opdracht 3</a></li>
+</ol>
 
 
 <footer>
     <h1>Foto van het moment ... </h1>
     <div class="containerFlex">
         <div>
-         <img src="AFBEELDINGEN/DSC_4662_Be.png" class="foto" alt="Een foto van een sportief getunede Mazda RX-7 met een Liberty Walk body-kit.">
+         <img src="AFBEELDINGEN/DSC_3071_.png" class="foto" alt="Een foto van een sportieve, mooi onderhouden BMW E30 cabrio.">
         </div>
 
          <div class="tekst">
-            <p>Deze foto werd gemaakt op zaterdag 13 december te Kortrijk. De getunede Mazda RX-7 was te bewonderen tijdens Petrol Brothers - On Ice 3.</p>
-            <p>Deze Mazda draagt een Liberty Walk body kit, bedoeld om de 'gewone' wagen te veranderen naar een sportief uitziende wagen.</p>
+            <p>Deze foto werd gemaakt op zaterdag 27 september te Sint-Eloois-Winkel. De BMW was te bewonderen tijdens Second Chapter Of Valhalla.</p>
+            <p>Deze E30 is uitgerust met een air-ride systeem, wat ervoor zorgt dat deze wagen zo laag tegen de grond staat, en velgen van het merk BBS.</p>
             <p>&copy; 2026 - <em>Vik Verbeke</em></p>
         </div>
     </div>
 </footer>
+
 </body>
 </html>
