Labo 14 - JavaScript Deel 2

--- a/Labo_13/Opdracht 3/index.html
+++ b/Labo_13/Opdracht 3/index.html
@@ -2,8 +2,9 @@
 <html lang="nl"> 
 <head> 
 	<title>Demo rekenmachine</title> 
-	<link rel="stylesheet" type="text/css" href="styles/index.css">	
-</head> 
+	<link rel="stylesheet" type="text/css" href="styles/index.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 
 <body> 
 	<input type="number" id="txtLinks">
