--- a/index.html
+++ b/index.html
@@ -99,7 +99,15 @@
 <ol>
     <li><a href="Labo_13/Opdracht%203/index.html">Opdracht 3</a></li>
 </ol>
+<h2>Labo 14</h2>
+<ol>
+    <li><a href="Labo_14/OpdrachtArrays.html">Opdracht Arrays</a></li>
+    <li><a href="Labo_14/OpdrachtDialoogVensters.html">Opdracht Dialoogvensters</a></li>
+    <li><a href="Labo_14/OpdrachtInnerHTML.html">Opdracht InnerHTML</a></li>
+    <li><a href="Labo_14/OpdrachtInnerHTMLAanpassing.html">Opdracht InnerHTML - Aanpassing</a></li>
+    <li><a href="Labo_14/OpdrachtKopieer.html">Opdracht Kopieer</a></li>
 
+</ol>
 
 <footer>
     <h1>Foto van het moment ... </h1>
